--- a/springboot-study/src/main/resources/application.properties
+++ b/springboot-study/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 # get请求参数及表单提交数据的日期格式
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 # 应用/项目的部署路径，默认为/
-server.servlet.context-path=/lucky-draw
+#server.servlet.context-path=/lucky-draw
 # SpringMVC中，DispatcherServlet的映射路径，默认为/**
 #spring.mvc.servlet.path=/**
 # 静态资源映射：将路径映射为/，即/static/xxx，映射为/xxx，支持多个字符串，逗号间隔
